修改header、footer路徑，bug修改

--- a/articleAll.html
+++ b/articleAll.html
@@ -8,26 +8,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/uiSet.css">
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/articleAll.css">
+	<!-- <link rel="stylesheet" href="assets/css/css/reset.css">
+    <link rel="stylesheet" href="assets/css/css/uiSet.css">
+    <link rel="stylesheet" href="assets/css/css/index.css">
+    <link rel="stylesheet" href="assets/css/css/header.css">
+    <link rel="stylesheet" href="assets/css/css/footer.css">
+    <link rel="stylesheet" href="assets/css/css/articleAll.css"> -->
+    <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../js/header.js"></script>
+    <script src="js/header.js"></script>
 </head>
 <body>
     <header>
         <section class="headerContain">
-            <section class="logoContain">
-                <section class="logo">
+            <div class="logoContain">
+                <div class="logo">
                     <a href="">
-                        <img src="../image/home_header_logo.png">
+                        <img src="assets/image/home_header_logo.png">
                     </a>
-                </section>
-            </section>
+                </div>
+            </div>
             <section class="hamburger"></section>
             <nav class="mainMenu fullscreen">
                 <ul>
@@ -62,17 +63,17 @@
                         <section class="memberList">
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconSearch.png">
+                                    <img src="assets/image/home_header_iconSearch.png">
                                 </a>
                             </section>
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconBell.png">
+                                    <img src="assets/image/home_header_iconBell.png">
                                 </a>
                             </section>
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconMember.png">
+                                    <img src="assets/image/home_header_iconMember.png">
                                 </a>
                             </section>
                         </section>
@@ -84,9 +85,9 @@
                         </section>
                     </li>
                 </ul>
-                <section class="close">
+                <div class="close">
                     <div></div>
-                </section>
+                </div>
             </nav>
         </section>
     </header>
@@ -104,7 +105,7 @@
                 <article class="article1">
                     <a href="">
                         <section class="pic">
-                            <img src="../image/article_articleContent_bag.png" alt="">
+                            <img src="assets/image/article_articleContent_bag.png" alt="">
                         </section>
                         <section class="txt">
                             <h4 class="deepColor">這是一個背包</h4>
@@ -115,7 +116,7 @@
                 <article class="article2">
                     <a href="">
                         <section class="pic">
-                            <img src="../image/article_articleContent_jeffBollun.png" alt="">
+                            <img src="assets/image/article_articleContent_jeffBollun.png" alt="">
                         </section>
                         <section class="txt">
                             <h4 class="deepColor">看起來普通的氣球</h4>
@@ -127,7 +128,7 @@
                 <article class="article3">
                     <a href="">
                         <section class="pic">
-                            <img src="../image/article_articleContent_threeMonster.jpg" alt="">
+                            <img src="assets/image/article_articleContent_threeMonster.jpg" alt="">
                         </section>
                         <section class="txt">
                             <h3 class="deepColor">盤子的歷史</h3>
@@ -143,7 +144,7 @@
                 <article class="article4">
                     <a href="">
                         <section class="pic">
-                            <img src="../image/article_articleContent_sculpt.png" alt="">
+                            <img src="assets/image/article_articleContent_sculpt.png" alt="">
                         </section>
                         <section class="txt">
                             <h4 class="deepColor">雕刻的意義</h4>
@@ -154,7 +155,7 @@
                 <article class="article5">
                     <a href="">
                         <section class="pic">
-                            <img src="../image/article_articleContent_flowerPainting.jpeg" alt="">
+                            <img src="assets/image/article_articleContent_flowerPainting.jpeg" alt="">
                         </section>
                         <section class="txt">
                             <h4 class="deepColor">花畫畫畫花</h4>
@@ -177,7 +178,7 @@
                 <article class="article6">
                     <a href="">
                         <section class="pic">
-                            <img src="../image/article_articleContent_bighead.png" alt="">
+                            <img src="assets/image/article_articleContent_bighead.png" alt="">
                         </section>
                         <section class="txt">
                             <h4 class="deepColor">屎臉</h4>
@@ -188,7 +189,7 @@
                 <!-- <article class="article7">
                     <a href="">
                         <section class="pic">
-                            <img src="../image/home_homeCatalog_elmoSculpt.png" alt="">
+                            <img src="assets/image/home_homeCatalog_elmoSculpt.png" alt="">
                         </section>
                         <h4 class="deepColor">第三章</h4>
                         <p class="lightColor">程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場，所有人選項服飾</p>
@@ -199,7 +200,7 @@
                 <article class="article1">
                     <a href="">
                         <section class="pic">
-                            <img src="../image/home_homeCatalog_smilePaint.png" alt="">
+                            <img src="assets/image/home_homeCatalog_smilePaint.png" alt="">
                         </section>
                         <section class="txt">
                             <h4 class="deepColor">蒙娜麗莎在笑你</h4>
@@ -210,7 +211,7 @@
                 <article class="article2">
                     <a href="">
                         <section class="pic">
-                                <img src="../image/home_homeCatalog_lavbag.png" alt="">
+                                <img src="assets/image/home_homeCatalog_lavbag.png" alt="">
                         </section>
                         <section class="txt">
                             <h4 class="deepColor">LV的包包</h4>
@@ -221,7 +222,7 @@
                 <article class="article3">
                     <a href="">
                         <section class="pic">
-                                <img src="../image/article_articleContent_flowerPainting.jpeg" alt="">
+                                <img src="assets/image/article_articleContent_flowerPainting.jpeg" alt="">
                             </section>
                             <section class="txt">
                                 <h4 class="deepColor">花畫畫畫花</h4>
@@ -244,7 +245,7 @@
                 <article class="article4">
                     <a href="">
                         <section class="pic">
-                                <img src="../image/home_homeIntro_suitcase.png" alt="">
+                                <img src="assets/image/home_homeIntro_suitcase.png" alt="">
                             </section>
                             <section class="txt">
                                 <h4 class="deepColor">超貴的行李箱</h4>
@@ -255,7 +256,7 @@
                 <article class="article5">
                     <a href="">
                         <section class="pic">
-                                <img src="../image/galley__lavKoonsbag.png" alt="">
+                                <img src="assets/image/galley__lavKoonsbag.png" alt="">
                         </section>
                         <section class="txt">
                             <h4 class="deepColor">另一個很貴的包包</h4>
@@ -266,7 +267,7 @@
                 <article class="article6">
                     <a href="">
                         <section class="pic">
-                                <img src="../image/article_articleContent_sculpt.png" alt="">
+                                <img src="assets/image/article_articleContent_sculpt.png" alt="">
                         </section>
                         <section class="txt">
                             <h4 class="deepColor">雕刻的意義</h4>
@@ -277,7 +278,7 @@
                 <!-- <article class="article7">
                     <a href="">
                         <section class="pic">
-                            <img src="../image/article_articleContent_flowerPainting.jpeg" alt="">
+                            <img src="assets/image/article_articleContent_flowerPainting.jpeg" alt="">
                         </section>
                         <h4 class="deepColor">第三章</h4>
                         <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
@@ -290,14 +291,14 @@
                 <section class="leftArticle">
                     <article>
                         <section class="pic">
-                            <img src="../image/article_articleContent_bag.png" alt="">
+                            <img src="assets/image/article_articleContent_bag.png" alt="">
                         </section>
                         <h4 class="deepColor">第一章</h4>
                         <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
                     </article>
                     <article>
                         <section class="pic">
-                            <img src="../image/article_articleContent_jeffBollun.png" alt="">
+                            <img src="assets/image/article_articleContent_jeffBollun.png" alt="">
                         </section>
                         <h4 class="deepColor">第二章</h4>
                         <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
@@ -306,14 +307,14 @@
                 <section class="rightArticle">
                     <article>
                         <section class="pic">
-                            <img src="../image/article_articleContent_kawsHolding.png" alt="">
+                            <img src="assets/image/article_articleContent_kawsHolding.png" alt="">
                         </section>
                         <h4 class="deepColor">第三章</h4>
                         <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
                     </article>
                     <article>
                         <section class="pic">
-                            <img src="../image/article_articleContent_plate.png" alt="">
+                            <img src="assets/image/article_articleContent_plate.png" alt="">
                         </section>
                         <h4 class="deepColor">第四章</h4>
                         <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
@@ -324,14 +325,14 @@
                 <section class="leftArticle">
                     <article>
                         <section class="pic">
-                            <img src="../image/article_articleContent_beBear.png" alt="">
+                            <img src="assets/image/article_articleContent_beBear.png" alt="">
                         </section>
                         <h4 class="deepColor">第一章</h4>
                         <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
                     </article>
                     <article>
                         <section class="pic">
-                            <img src="../image/article_articleContent_sculpt.png" alt="">
+                            <img src="assets/image/article_articleContent_sculpt.png" alt="">
                         </section>
                         <h4 class="deepColor">第二章</h4>
                         <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
@@ -340,14 +341,14 @@
                 <section class="rightArticle">
                     <article>
                         <section class="pic">
-                            <img src="../image/article_articleContent_flowerPainting.jpeg" alt="">
+                            <img src="assets/image/article_articleContent_flowerPainting.jpeg" alt="">
                         </section>
                         <h4 class="deepColor">第三章</h4>
                         <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
                     </article>
                     <article>
                         <section class="pic">
-                            <img src="../image/article_articleContent_bighead.png" alt="">
+                            <img src="assets/image/article_articleContent_bighead.png" alt="">
                         </section>
                         <h4 class="deepColor">第四章</h4>
                         <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
@@ -360,28 +361,28 @@
                 <section class="footerContain">
                     <section class="logoContain">
                         <section class="logo">
-                            <img src="../image/home_header_logo.png">
+                            <img src="assets/image/home_header_logo.png">
                         </section>
                     </section>
                     <section class="socialContain">
                         <section class="logo">
                             <a href="">
-                                <img src="../image/home_footer_facebook.png">
+                                <img src="assets/image/home_footer_facebook.png">
                             </a>
                         </section>
                         <section class="logo">
                             <a href="">
-                                <img src="../image/home_footer_instagram.png">
+                                <img src="assets/image/home_footer_instagram.png">
                             </a>
                         </section>
                         <section class="logo">
                             <a href="">
-                                <img src="../image/home_footer_twitter.png">
+                                <img src="assets/image/home_footer_twitter.png">
                             </a>
                         </section>
                         <section class="logo">
                             <a href="">
-                                <img src="../image/home_footer_line.png">
+                                <img src="assets/image/home_footer_line.png">
                             </a>
                         </section>
                     </section>
