--- a/homePage.html
+++ b/homePage.html
@@ -5,26 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-	<link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+	<!-- <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/uiSet.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- <link rel="stylesheet" href="assets/css/headerNormal.css"> -->
-    <!-- <link rel="stylesheet" href="assets/css/footer.css"> -->
+    <link rel="stylesheet" href="assets/css/headerNormal.css">
+    <link rel="stylesheet" href="assets/css/footer.css"> -->
     <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/header.js"></script>
 </head>
 <body>   
     <header>
-        <section class="headerContain">
+        <section class="headerNormalContain">
             <section class="logoContain">
-                <section class="logo">
-                    <a href="">
-                        <img src="assets/image/home_header_logo.png">
-                    </a>
-                </section>
+                <div class="logo">
+                        <a href="">
+                            <img src="assets/image/home_header_logo.png">
+                        </a>
+                </div>
             </section>
-            <section class="hamburger"></section>
+            <div class="hamburger"></div>
             <nav class="mainMenu fullscreen">
                 <ul>
                     <li style="--animation-order: 1;">
@@ -56,123 +57,123 @@
                     </li>
                     <li style="--animation-order: 6;">
                         <section class="memberList">
-                            <section class="icon">
-                                <a href="">
-                                    <img src="assets/image/home_header_iconBell.png">
-                                </a>
-                            </section>
-                            <section class="icon">
-                                <a href="">
-                                    <img src="assets/image/home_header_iconMember.png">
-                                </a>
-                            </section>
+                            <div class="icon">
+                                    <a href="">
+                                        <img src="assets/image/home_header_iconBell.png">
+                                    </a>
+                            </div>
+                            <div class="icon">
+                                    <a href="">
+                                        <img src="assets/image/home_header_iconMember.png">
+                                    </a>
+                            </div>
                         </section>
                     </li>
                     <li style="--animation-order: 7;">
-                        <section class="login">
+                        <div class="login">
                             <a href="" class="deepColor">登入</a>
                             <a href="" class="deepColor epFBgColor round">上架</a>
-                        </section>
+                        </div>
                     </li>
                 </ul>
-                <section class="close">
+                <div class="close">
                     <div></div>
-                </section>
+                </div>
             </nav>
         </section>
     </header>
     <section class="homeIntro">
-        <section class="intro">
+        <div class="intro">
             <section class="pic">
                 <img src="assets/image/home_homeIntro_suitcase.png" alt="">
             </section>
             <h1 class="deepColor">不是缺少美，<br>是缺少發現。</h1>  
-        </section>
-        <section class="scrollMouse">
+        </div>
+        <div class="scrollMouse">
             <section class="pic">
                 <img src="assets/image/home_homeIntro_mouse.png" alt="">
             </section>
             <p class="lightColor small">Scroll Down</p>
-        </section>
+        </div>
     </section>
     <section class="homeCatalog">
-        <section class="catalog">
-           <section class="card sculpture">
-               <section class="pic">
+        <div class="catalog">
+           <div class="card sculpture">
+               <div class="pic">
                     <img src="assets/image/home_homeCatalog_man.png"  alt="">
-               </section>
-               <section class="txt">
+               </div>
+               <div class="txt">
                     <h2 class="deepColor">雕塑類</h2>
                     <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
                     <button class="round">競標</button>
-               </section>
-           </section>
-           <section class="card paint">
-                <section class="pic">
+               </div>
+           </div>
+           <div class="card paint">
+                <div class="pic">
                     <img src="assets/image/home_homeCatalog_smilePaint.png"  alt="">
-                </section>
-                <section class="txt">
+                </div>
+                <div class="txt">
                     <h2 class="deepColor">畫作類</h2>
                     <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
                     <button class="round">競標</button>
-                </section>
-           </section>
-           <section class="card toy">
-                <section class="pic">
+                </div>
+           </div>
+           <div class="card toy">
+                <div class="pic">
                     <img src="assets/image/home_homeCatalog_elmoSculpt.png"  alt="">
-                </section>
-                <section class="txt">
+                </div>
+                <div class="txt">
                     <h2 class="deepColor">公仔類</h2>
                     <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
                     <button class="round">競標</button>
-                </section>
-           </section>
-           <section class="card brame">
-                <section class="pic">
+                </div>
+           </div>
+           <div class="card brame">
+                <div class="pic">
                     <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
-                </section>
-                <section class="txt">
+                </div>
+                <div class="txt">
                     <h2 class="deepColor">品牌合作</h2>
                     <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
                     <button class="round">競標</button>
-                </section>
-           </section>
-        </section>
+                </div>
+           </div>
+        </div>
     </section>
     <section class="homeGallery">
-        <section class="scrollPic">
+        <div class="scrollPic">
             <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
-        </section>
-        <section class="pic">
+        </div>
+        <div class="pic">
             <img src="assets/image/home_homGallery_gallery.jpeg" alt="">
-        </section>
+        </div>
     </section>
    <section class="homeMember">
-        <section class="scrollPic">
+        <div class="scrollPic">
             <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
-        </section>
-        <section class="pic">
+        </div>
+        <div class="pic">
             <img src="assets/image/home_homeMember_room.png" alt="">
-        </section>
+        </div>
     </section>
     <section class="homeNews">
-        <section class="newsContain">
+        <div class="newsContain">
             <h2 class="deepColor">藝論</h2>
             <article class="item">
-                <section class="pic">
+                <div class="pic">
                     <img src="assets/image/home_homeNews_author.jpg" alt="">
-                </section>
-                <section class="content">
-                    <section class="txt">
+                </div>
+                <div class="content">
+                    <div class="txt">
                         <h3 class="deepColor">藝術家村上隆</h3>
                         <p class="lightColor">出生於1962年2月1日是一位日本藝術家。他曾就學於東京藝術大學。受日本動畫和日本漫畫影響而專注於御宅族文化和生活方式的後現代藝術風格——超扁平（Superflat）運動創始人。</p>
-                    </section>
+                    </div>
                     <button class="roundOutline">
                         看更多
                     </button>
-                </section>
+                </div>
             </article>
-        </section>
+        </div>
         <section class="zigzag">
             <img src="assets/image/home_homeNews_zigzag.png" alt="">
         </section>
@@ -191,59 +192,59 @@
     </section>
     <footer>
         <section class="footerContain">
-            <section class="logoContain">
-                <section class="logo">
-                    <img src="assets/image/home_header_logo.png">
-                </section>
-            </section>
-            <section class="socialContain">
-                <section class="logo">
-                    <a href="">
-                        <img src="assets/image/home_footer_facebook.png">
-                    </a>
-                </section>
-                <section class="logo">
-                    <a href="">
-                        <img src="assets/image/home_footer_instagram.png">
-                    </a>
-                </section>
-                <section class="logo">
-                    <a href="">
-                        <img src="assets/image/home_footer_twitter.png">
-                    </a>
-                </section>
-                <section class="logo">
-                    <a href="">
-                        <img src="assets/image/home_footer_line.png">
-                    </a>
-                </section>
-            </section>
+            <div class="logoContain">
+                    <div class="logo">
+                        <img src="assets/image/home_header_logo.png">
+                    </div>
+            </div>
+            <div class="socialContain">
+                    <div class="logo">
+                        <a href="">
+                            <img src="assets/image/home_footer_facebook.png">
+                        </a>
+                    </div>
+                    <div class="logo">
+                        <a href="">
+                            <img src="assets/image/home_footer_instagram.png">
+                        </a>
+                    </div>
+                    <div class="logo">
+                        <a href="">
+                            <img src="assets/image/home_footer_twitter.png">
+                        </a>
+                    </div>
+                    <div class="logo">
+                        <a href="">
+                            <img src="assets/image/home_footer_line.png">
+                        </a>
+                    </div>
+            </div>
             <nav>
-                <ul>
-                    <li>
-                        <a href="">藝廊</a>
-                    </li>
-                    <li>
-                        <a href="">拍賣廳</a>
-                    </li>
-                    <li>
-                        <a href="">藝論</a>
-                    </li>
-                    <li>
-                        <a href="">關於我們</a>
-                    </li>
-                    <li>
-                        <a href="">會員中心</a>
-                    </li>
-                </ul>
+                    <ul>
+                        <li>
+                            <a href="">藝廊</a>
+                        </li>
+                        <li>
+                            <a href="">拍賣廳</a>
+                        </li>
+                        <li>
+                            <a href="">藝論</a>
+                        </li>
+                        <li>
+                            <a href="">關於我們</a>
+                        </li>
+                        <li>
+                            <a href="">會員中心</a>
+                        </li>
+                    </ul>
             </nav>
-            <section class="copyright">
-                <p>@2022 Powered by 藝論 Right Reserved<br>本網站為緯育Tibame前端設計工程師班專題作業，本平台僅供學習、展示之用。</p>
-            </section>
+            <div class="copyright">
+                    <p>@2022 Powered by 藝論 Right Reserved<br>本網站為緯育Tibame前端設計工程師班專題作業，本平台僅供學習、展示之用。</p>
+            </div>
         </section>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/homePage.js"></script>
 </body>
 </html>
