--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article Page</title>
-	<link rel="stylesheet" href="../assets/css/reset.css">
-    <link rel="stylesheet" href="../assets/css/uiSet.css">
-    <link rel="stylesheet" href="../assets/css/index.css">
-    <link rel="stylesheet" href="../assets/css/header.css">
-    <link rel="stylesheet" href="../assets/css/footer.css">
-    <link rel="stylesheet" href="../assets/css/articlePage.css">
+	<!-- <link rel="stylesheet" href="assets/assets/css/reset.css">
+    <link rel="stylesheet" href="assets/assets/css/uiSet.css">
+    <link rel="stylesheet" href="assets/assets/css/index.css">
+    <link rel="stylesheet" href="assets/assets/css/header.css">
+    <link rel="stylesheet" href="assets/assets/css/footer.css">
+    <link rel="stylesheet" href="assets/assets/css/articlePage.css"> -->
+    <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../js/header.js"></script>
+    <script src="js/header.js"></script>
 </head>
 <body>
     <!-- 主標32px letter-spacing:-0.512px line-height:40px
@@ -21,14 +22,14 @@
     內文20px letter-spacing:-0.06px line-height:32px -->
     <header>
         <section class="headerContain">
-            <section class="logoContain">
-                <section class="logo">
+            <div class="logoContain">
+                <div class="logo">
                     <a href="">
-                        <img src="../image/home_header_logo.png">
+                        <img src="assets/image/home_header_logo.png">
                     </a>
-                </section>
-            </section>
-            <section class="hamburger"></section>
+                </div>
+            </div>
+            <div class="hamburger"></div>
             <nav class="mainMenu fullscreen">
                 <ul>
                     <li style="--animation-order: 1;">
@@ -54,17 +55,17 @@
                         <section class="memberList">
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconSearch.png">
+                                    <img src="assets/image/home_header_iconSearch.png">
                                 </a>
                             </section>
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconBell.png">
+                                    <img src="assets/image/home_header_iconBell.png">
                                 </a>
                             </section>
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconMember.png">
+                                    <img src="assets/image/home_header_iconMember.png">
                                 </a>
                             </section>
                         </section>
@@ -76,9 +77,9 @@
                         </section>
                     </li>
                 </ul>
-                <section class="close">
+                <div class="close">
                     <div></div>
-                </section>
+                </div>
             </nav>       
         </section>
     </header>
@@ -127,27 +128,27 @@
                     </article>
                     <section class="shareBar">
                         <section class="pic">
-                            <img src="../image/articlePage_shareBar_comment.png">
+                            <img src="assets/image/articlePage_shareBar_comment.png">
                         </section>
                         <section class="socialMedia">
                             <section class="pic">
                                 <a href="">
-                                    <img src="../image/home_footer_facebook.png">
+                                    <img src="assets/image/home_footer_facebook.png">
                                 </a>
                             </section>
                             <section class="pic">
                                 <a href="">
-                                    <img src="../image/home_footer_instagram.png">
+                                    <img src="assets/image/home_footer_instagram.png">
                                 </a>
                             </section>
                             <section class="pic">
                                 <a href="">
-                                    <img src="../image/home_footer_twitter.png">
+                                    <img src="assets/image/home_footer_twitter.png">
                                 </a>
                             </section>
                             <section class="pic">
                                 <a href="">
-                                    <img src="../image/home_footer_line.png">
+                                    <img src="assets/image/home_footer_line.png">
                                 </a>
                             </section>
                         </section>
@@ -235,28 +236,28 @@
         <section class="footerContain">
             <section class="logoContain">
                 <section class="logo">
-                    <img src="../image/home_header_logo.png">
+                    <img src="assets/image/home_header_logo.png">
                 </section>
             </section>
             <section class="socialContain">
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_facebook.png">
+                        <img src="assets/image/home_footer_facebook.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_instagram.png">
+                        <img src="assets/image/home_footer_instagram.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_twitter.png">
+                        <img src="assets/image/home_footer_twitter.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_line.png">
+                        <img src="assets/image/home_footer_line.png">
                     </a>
                 </section>
             </section>
