--- a/about.html
+++ b/about.html
@@ -67,12 +67,12 @@
                     <div class="memberList">
                         <div class="icon">
                             <a href="">
-                                <img src="assets/image/home_header_iconBellpng">
+                                <img src="assets/image/home_header_iconBell.png">
                             </a>
                         </div>
                         <div class="icon">
                             <a href="">
-                                <img src="assets/image/home_header_iconMemberpng">
+                                <img src="assets/image/home_header_iconMember.png">
                             </a>
                         </div>
                     </div>
