--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -20,69 +20,7 @@
     <!-- 主標32px letter-spacing:-0.512px line-height:40px
     副標22px letter-spacing:normal line-height:28px
     內文20px letter-spacing:-0.06px line-height:32px -->
-    <header>
-        <section class="headerContain">
-            <div class="logoContain">
-                <div class="logo">
-                    <a href="">
-                        <img src="assets/image/home_header_logo.png">
-                    </a>
-                </div>
-            </div>
-            <div class="hamburger"></div>
-            <nav class="mainMenu fullscreen">
-                <ul>
-                    <li style="--animation-order: 1;">
-                        <input id="navMenu" type="checkbox">
-                        <label for="navMenu" class="deepColor">
-                                <span>藝廊</span>
-                                <i class="fa-solid fa-angle-down"></i>
-                            </a>
-                        </label>
-                        <ul>
-                            <li><a href="" class="lightColor">展示區</a></li>
-                            <li><a href="" class="lightColor">雕塑類</a></li>
-                            <li><a href="" class="lightColor">畫作類</a></li>
-                            <li><a href="" class="lightColor">公仔類</a></li>
-                            <li><a href="" class="lightColor">品牌合作</a></li>
-                        </ul>
-                    </li>
-                    <li style="--animation-order: 2;"><a href="" class="deepColor">拍賣廳</a></li>
-                    <li style="--animation-order: 3;"><a href="" class="deepColor">藝論</a></li>
-                    <li style="--animation-order: 4;"><a href="" class="deepColor">關於我們</a></li>
-                    <li style="--animation-order: 5;"><a href="" class="deepColor">會員中心</a></li>
-                    <li style="--animation-order: 6;">
-                        <section class="memberList">
-                            <section class="icon">
-                                <a href="">
-                                    <img src="assets/image/home_header_iconSearch.png">
-                                </a>
-                            </section>
-                            <section class="icon">
-                                <a href="">
-                                    <img src="assets/image/home_header_iconBell.png">
-                                </a>
-                            </section>
-                            <section class="icon">
-                                <a href="">
-                                    <img src="assets/image/home_header_iconMember.png">
-                                </a>
-                            </section>
-                        </section>
-                    </li>
-                    <li style="--animation-order: 7;">
-                        <section class="login">
-                            <a href="" class="deepColor">登入</a>
-                            <a href="" class="deepColor epFBgColor">上架</a>
-                        </section>
-                    </li>
-                </ul>
-                <div class="close">
-                    <div></div>
-                </div>
-            </nav>       
-        </section>
-    </header>
+    @@include('layout/header.html')
     <section class="articlePageContent">
         <section class="articlePageWrap">
             <section class="pageContent">
@@ -232,58 +170,6 @@
             </aside>
         </section>
     </section>
-    <footer>
-        <section class="footerContain">
-            <section class="logoContain">
-                <section class="logo">
-                    <img src="assets/image/home_header_logo.png">
-                </section>
-            </section>
-            <section class="socialContain">
-                <section class="logo">
-                    <a href="">
-                        <img src="assets/image/home_footer_facebook.png">
-                    </a>
-                </section>
-                <section class="logo">
-                    <a href="">
-                        <img src="assets/image/home_footer_instagram.png">
-                    </a>
-                </section>
-                <section class="logo">
-                    <a href="">
-                        <img src="assets/image/home_footer_twitter.png">
-                    </a>
-                </section>
-                <section class="logo">
-                    <a href="">
-                        <img src="assets/image/home_footer_line.png">
-                    </a>
-                </section>
-            </section>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="">藝廊</a>
-                    </li>
-                    <li>
-                        <a href="">拍賣廳</a>
-                    </li>
-                    <li>
-                        <a href="">藝論</a>
-                    </li>
-                    <li>
-                        <a href="">關於我們</a>
-                    </li>
-                    <li>
-                        <a href="">會員中心</a>
-                    </li>
-                </ul>
-            </nav>
-            <section class="copyright">
-                <p>@2022 Powered by 藝論 Right Reserved<br>本網站為緯育Tibame前端設計工程師班專題作業，本平台僅供學習、展示之用。</p>
-            </section>
-        </section>
-    </footer>
+    @@include('layout/footer.html')
 </body>
 </html>
